fix: 'jumping' footer

--- a/src/modules/Footer/_index.scss
+++ b/src/modules/Footer/_index.scss
@@ -5,7 +5,7 @@
 }
 
 .footer-mini {
-  margin: 25px 30px;
+  margin: 25px 30px 30px;
   align-items: flex-end;
   @include open-sans_font($grey_font, $desctop_size_font);
 
